# entservices-softwareupdate

./: CHANGELOG.md  CMakeLists.txt  Network.sh  README.md  build_depencies.sh  build_dependencies.sh  cov_build.sh  services.cmake
.github/: CODEOWNERS  copilot-instructions.md
.github/instructions/: Plugin.instructions.md  Pluginimplementation.instructions.md
.github/workflows/: .L1-tests.yml.swp  L1-tests.yml  L2-tests.yml  component-release.yml  native_full_build.yml  tests-trigger.yml
FirmwareDownload/: CMakeLists.txt  FirmwareDownload.conf.in  FirmwareDownload.config  FirmwareDownload.cpp  FirmwareDownload.h  FirmwareDownloadImplementation.cpp  FirmwareDownloadImplementation.h  Module.h
FirmwareUpdate/: CMakeLists.txt  FirmwareUpdate.conf.in  FirmwareUpdate.config  FirmwareUpdate.cpp  FirmwareUpdate.h  FirmwareUpdateHelper.h  FirmwareUpdateImplementation.cpp  FirmwareUpdateImplementation.h  Module.h
MaintenanceManager/: CMakeLists.txt  MaintenanceManager.cpp  MaintenanceManager.h  mockauthservices.h
MaintenanceManager/Test/: MockMaintenancemanager.h  Mockmaintenancemanager.cpp
MaintenanceManager/cmake/: FindIARMBus.cmake
Packager/: CMakeLists.txt  Module.h  PackagerImplementation.h  opkg.conf.in
Tests/: README.md
Tests/L1Tests/: CMakeLists.txt
Tests/L1Tests/tests/: test_FirmwareUpdate.cpp  test_MaintenanceManager.cpp  test_Packager.cpp  test_UtilsFile.cpp
Tests/L2Tests/: CMakeLists.txt
Tests/L2Tests/tests/: FirmwareUpdate_L2Test.cpp  MaintenancemanagerL2.cpp  MockAccessor.h  PowerManagerAPI.h  Rfc.h  iarm.h  mfr.h
Tests/L2Tests/tests/MockAuthService/: CMakeLists.txt  MockAuthServicePlugin.conf.in
Tests/L2Tests/tests/MockNetwork/: CMakeLists.txt  MockNetworkPlugin.conf.in  MockNetworkPlugin.config  MockNetworkPlugin.cpp  MockNetworkPlugin.h  Module.h  Network1.json
Tests/L2Tests/tests/MockSecManager/: CMakeLists.txt
Tests/L2Tests/tests/MockUtils/: RfcUtils.h
Tests/L2Tests/tests/interfaces/: IMfr.h  IPowerManagerHal.h  IRBus.h
Tests/TestScripts/: test_maintenanceMode_BACKGROUND_ENFORCE_OPTOUT.sh  test_maintenanceMode_BACKGROUND_IGNOREUPDATE.sh  test_maintenanceMode_BACKGROUND_NONE.sh  test_maintenanceMode_FOREGROUND_ENFORCE_OPTOUT.sh  test_maintenanceMode_FOREGROUND_IGNORE_UPDATE.sh  test_maintenanceMode_FOREGROUND_NONE.sh  test_maintenanceMode_criticalUpdate.sh
cmake/: FindIARMBus.cmake
helpers/: UtilsController.h  UtilsJsonRpc.h  UtilsLogging.h  UtilsgetFileContent.h  cSettings.h  frontpanel.cpp
